# code-analysis-tool

./: .gitignore  BASELINE.md  CHANGELOG.md  CONTRIBUTING.md  Code Quality Analyzer Suite.txt  DEVELOPER_HANDOFF.md  MULTI_LANG_IMPLEMENTATION_PLAN.md  Makefile  March 5 2026 Code Patch.txt  Multi-language analyze.txt  OpenAPI release gate scripts check_openapi_release_gate.txt  OpenAPI- Semantic Diff Engine- Breaking Classifier- Allowlist Policy.txt  RESCUE_PLAN.md  TEST_FAILURE_REMEDIATION.md  TODO.md  code-analysis-tool.code-workspace  pyproject.toml  pytest_full_run.txt  test_full_results.txt
.github/: CODEOWNERS  ONCALL_ROTATION_SCHEMA_COMPATIBILITY.md  PULL_REQUEST_TEMPLATE.md  SESSION_BOOKMARK.md  copilot-instructions.md  oncall_rotation.json  oncall_rotation.manifest.json  oncall_rotation.schema.json  oncall_rotation.schema.manifest.json
baselines/: main.json
cbsp21/: README.md  patch_input.json  patch_input.json.example  patch_input.schema.json  patch_input.template.json
ci/: enforce_fallback_schema_sync.sh  enforce_schema_version_bump.sh  reject_stale_schema_duplicate.sh
code_audit/: __init__.py  __main__.py
docs/: ALPHA_OMEGA_HANDOFF.md  CI_INTEGRATION_IMPL.md  CONTRACT.md  DECISION_PATHS.md  DEPLOYMENT_PLAN.md  ENGINEER_HANDBACK_2026-02-14.md  MULTI_LANG_JS_TS_IMPLEMENTATION.md  ORGANIZATION_PLAN.md  REHYDRATION_SUMMARY.md  TOOL_CATALOG.md  contracts_bundle.json  openapi.json  quality-issue-catalog.md  rule_registry.json  support-matrix.md
schemas/: contracts_versions.schema.json  debt_snapshot.example.json  debt_snapshot.schema.json  drift_budget_signal.example.json  drift_budget_signal.schema.json  finding.schema.json  openapi_release_gate_result.schema.json  release_audit_failure.schema.json  release_bom.schema.json  release_bom_consistency_result.schema.json  (+9 more)
(+395 files in other folders)
